<resources>
    <string name="app_name">tp6</string>
    <string name="list">Liste de liste de courses</string>
    <string name="liste_de_course">Liste de courses</string>
    <string name="ajouter">Ajouter</string>
    <string name="quantit">Quantité</string>
    <string name="nom">Nom</string>
    <string name="retour">Retour</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
</resources>